[gd_scene load_steps=29 format=3 uid="uid://dtqo2uvytrhsr"]

[ext_resource type="Texture2D" uid="uid://cvehiyje8r2le" path="res://Assets/Enemies/Dripboss/From John/0.png" id="1_88xww"]
[ext_resource type="Script" path="res://Scenes/Dripboss/Dripboss.gd" id="1_cpdeo"]
[ext_resource type="Texture2D" uid="uid://btvy678eqgtmc" path="res://Assets/Enemies/Dripboss/From John/eyes+pupil/3.png" id="2_40t7f"]
[ext_resource type="PackedScene" uid="uid://dbkfurlf5s8aj" path="res://Scenes/enemy_death_animation.tscn" id="2_orm23"]
[ext_resource type="Texture2D" uid="uid://bv3djgg6qctry" path="res://Assets/Enemies/Dripboss/From John/eyes+pupil/4.png" id="3_r530o"]
[ext_resource type="Texture2D" uid="uid://7o45t110fm3d" path="res://Assets/Enemies/Dripboss/From John/eyes+pupil/5.png" id="4_35fcj"]
[ext_resource type="Texture2D" uid="uid://b0b8q5udqx8e2" path="res://Assets/Enemies/Dripboss/From John/eyes+pupil/6.png" id="5_hj1bn"]
[ext_resource type="Texture2D" uid="uid://bicjrjtry2k46" path="res://Assets/Enemies/Dripboss/From John/eyes+pupil/7.png" id="6_tlswi"]
[ext_resource type="Texture2D" uid="uid://d2aqmffquan4i" path="res://Assets/Enemies/Dripboss/From John/eyes+pupil/8.png" id="7_kqaay"]
[ext_resource type="Texture2D" uid="uid://bi6ndupprgdw0" path="res://Assets/Enemies/Dripboss/From John/eyes+pupil/9.png" id="8_7t1g6"]
[ext_resource type="Texture2D" uid="uid://r8vvweimavgu" path="res://Assets/Enemies/Dripboss/From John/blink.png" id="9_14ytu"]
[ext_resource type="AudioStream" uid="uid://blhn66mici827" path="res://Assets/Audio/Sounds/laserhit.ogg" id="12_ny0tq"]
[ext_resource type="AudioStream" uid="uid://dd33u5llxkov1" path="res://Assets/Audio/Sounds/critterscreech.ogg" id="13_kfqfe"]
[ext_resource type="AudioStream" uid="uid://bm5iaqamy47dv" path="res://Assets/Audio/Sounds/killboss.ogg" id="14_bojty"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l70ea"]
radius = 52.0096

[sub_resource type="CircleShape2D" id="CircleShape2D_4gtcq"]
radius = 38.0132

[sub_resource type="SpriteFrames" id="SpriteFrames_ov5wi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_88xww")
}],
"loop": true,
"name": &"body",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_s8dxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_40t7f")
}],
"loop": true,
"name": &"eye_1",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ofy4e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_r530o")
}],
"loop": true,
"name": &"eye_2",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_c4qj6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_35fcj")
}],
"loop": true,
"name": &"eye_3",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_swg8m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hj1bn")
}],
"loop": true,
"name": &"eye_4",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_eo7tv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tlswi")
}],
"loop": true,
"name": &"eye_5",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qwju8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_kqaay")
}],
"loop": true,
"name": &"eye_6",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_61ln7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_7t1g6")
}],
"loop": true,
"name": &"eye_7",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_scjch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_14ytu")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hl8lu"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Eye_1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Eye_2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Eye_3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Eye_4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Eye_5:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0), Vector2(1, -1), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Eye_6:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Eye_7:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0), Vector2(-1, 1), Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Blink:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Body/Blink:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.4001, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, false, false, false, false, false, false, true, false, false, false, true, true, true, false, false, false, false, false]
}

[sub_resource type="Animation" id="Animation_uk8m3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Eye_1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Eye_2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Eye_3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Eye_4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Eye_5:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Eye_6:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Eye_7:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Blink:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t8ect"]
_data = {
"Idle": SubResource("Animation_hl8lu"),
"RESET": SubResource("Animation_uk8m3")
}

[node name="Dripboss" type="CharacterBody2D" groups=["Enemies"]]
z_index = 1
collision_layer = 0
script = ExtResource("1_cpdeo")
enemy_death_effect = ExtResource("2_orm23")
health = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l70ea")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4gtcq")

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ov5wi")
animation = &"body"

[node name="Eye_1" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_s8dxp")
animation = &"eye_1"

[node name="Eye_2" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_ofy4e")
animation = &"eye_2"

[node name="Eye_3" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_c4qj6")
animation = &"eye_3"

[node name="Eye_4" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_swg8m")
animation = &"eye_4"

[node name="Eye_5" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_eo7tv")
animation = &"eye_5"

[node name="Eye_6" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_qwju8")
animation = &"eye_6"

[node name="Eye_7" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_61ln7")
animation = &"eye_7"

[node name="Blink" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_scjch")
animation = &"blink"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_t8ect")
}

[node name="ProjectileHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ny0tq")

[node name="Screetch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_kfqfe")
volume_db = -10.0

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_bojty")
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CeilingFloorCheck" type="RayCast2D" parent="."]
position = Vector2(0, 47)
target_position = Vector2(0, 10)

[node name="WallsCheck" type="RayCast2D" parent="."]
position = Vector2(40, 0)
target_position = Vector2(11, 0)

[node name="TopCornersCheck" type="RayCast2D" parent="."]
position = Vector2(25, -30)
target_position = Vector2(11, 0)

[node name="BottomCornersCheck" type="RayCast2D" parent="."]
position = Vector2(25, 30)
target_position = Vector2(11, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
